<resources>
    <string name="app_name">UTSprojectgladys</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="food_list_title">Food and Beverages</string>
    <string name="food_name">Food Name</string>
    <string name="add_notes_text">Additional Notes</string>
    <string name="order_food_section">Order Food</string>
    <string name="servings_text">Number of Servings</string>
    <string name="enter_servings">Enter number of servings</string>
    <string name="ordering_name_text">Ordering Name</string>
    <string name="ordering_name_hint">Ordering name by</string>
    <string name="enter_add_notes">Enter any additional notes</string>
    <string name="place_order">Place Order</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="food_name_text">Food Name</string>
    <string name="desc_food">Description of the food.</string>
    <string name="confirm_order_food">Order Confirmation</string>
    <string name="confirm_food_name">"Food Name: %1$s"</string>
    <string name="confirm_servings">"Number of Servings: %1$s"</string>
    <string name="confirm_ordering_name">"Ordering Name: %1$s"</string>
    <string name="confirm_add_notes">"Additional Notes: %1$s"</string>
    <string name="confirm_thanks_text">Thanks for your order and please wait for delivering by nearest courier</string>
    <string name="confirm_back_to_menu">Back to Menu</string>
</resources>