<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".RegisterActivity">

    <!-- Card View untuk memberikan tampilan bayangan -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/logo_food_and_drink" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Username Field -->
            <EditText
                android:id="@+id/RegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:drawableLeft="@drawable/ic_person"
                android:padding="12dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:backgroundTint="@color/white" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawableLeft="@drawable/ic_lock"
                android:padding="12dp"
                android:layout_marginBottom="24dp"
                android:inputType="textPassword"
                android:backgroundTint="@color/white" />

            <!-- Register Button -->
            <Button
                android:id="@+id/RegisterSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/orange"
                android:padding="12dp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
